# Homework_29_2

./: README.md  manage.py  pyproject.toml
advertisements/: serializers.py  views.py
advertisements/urls/: categories.py
homework_28_2/: asgi.py  settings.py  urls.py  wsgi.py
homework_29_2/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  serializers.py  views.py
